--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Harold S. Nabua",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.9.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "sqlite3": "^5.1.7"
